Updated refresh token response
