# src/main/resources/openapi.yaml
@@ -79,7 +79,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TokenResponse'
+                $ref: '#/components/schemas/AuthResponse'
         '401':
           description: Invalid refresh token
 
@@ -471,14 +471,6 @@ components:
       properties:
         tokens:
           $ref: '#/components/schemas/Tokens'
-
-    TokenResponse:
-      type: object
-      properties:
-        accessToken:
-          type: string
-        refreshToken:
-          type: string
 
     Tokens:
       type: object
